--- a/senguo.cc/admin/static/items/admin/order-print-page.html
+++ b/senguo.cc/admin/static/items/admin/order-print-page.html
@@ -8,8 +8,8 @@
 			<li><span style="float:left;">下单时间：</span><span class="orderTime" style="width:142px;display:inline-block;"></span></li>
 			<li><span style="float:left;">顾客姓名：</span><span class="receiver" style="width:142px;display:inline-block;"></span></li>
 			<li><span style="float:left;">顾客电话：</span><span class="phone" style="width:142px;display:inline-block;"></span></li>
-			<li><span style="float:left;">配送时间：</span><span class="deliveryTime" style="width:142px;display:inline-block;"></span></li>
-			<li><span style="float:left;">配送地址：</span><span class="address" style="width:142px;display:inline-block;"></span></li>
+			<li><span style="float:left;"><span class="self">配送</span>时间：</span><span class="deliveryTime" style="width:142px;display:inline-block;"></span></li>
+			<li><span style="float:left;"><span class="self">配送</span>地址：</span><span class="address" style="width:142px;display:inline-block;"></span></li>
 			<li class="user-remark text-left" style="display:none;"><span style="float:left;">买家留言：</span><span class="remark" style="width:142px;display:inline-block;"></span></li>
 			<li class="saler-remark text-left" style="display:none;"><span style="float:left;">卖家备注：</span><span class="remark" style="width:142px;display:inline-block;"></span></li>
 		</ul>
