--- a/senguo.cc/admin/static/items/superAdmin/user-item.html
+++ b/senguo.cc/admin/static/items/superAdmin/user-item.html
@@ -3,7 +3,7 @@
 <div class="col-lg-3 col-md-3 col-sx-3 col-sm-3">
     <p class="clearfix mt5">
         <span class="pull-left">ID：<a class="user-id"></a></span>
-        <span class="pull-right">微信号:<span class="wx-username"></span></span>
+        <span class="pull-right">微信号：<span class="wx-username"></span></span>
     </p>
     <div class="clearfix">
         <span class="pull-left">关注的店铺：</span>
