--- a/senguo.cc/admin/static/items/admin/goods-item.html
+++ b/senguo.cc/admin/static/items/admin/goods-item.html
@@ -97,7 +97,7 @@
         <p><span class="title">商品限购</span> <input type="text" class="limit_num" value="0"/> 输入商品限购数量（每用户每天可购买当前商品的数量），0为默认不限购</p>
         <p class="mt8"><span class="title">排序优先级</span> <input type="text" class="goods-priority" value="0"/> 输入0-9的数字，数字越大，商品排序越靠前</p>
         <p class="mt8"><span class="title">商品标签</span> <span class="mr5 tag-item active" data-id="1">无</span><span class="mr5 tag-item" data-id="2">限时折扣</span><span class="mr5 tag-item" data-id="3">热卖中</span><span class="mr5 tag-item" data-id="4">今日特价</span><span class="mr5 tag-item" data-id="5">新品</span></p>
-         <p class="mt8"><span class="title">购买权限</span> <span class="mr5 buylimit-item active" data-id="0">无</span><span class="mr5 buylimit-item" data-id="1">仅限新用户</span><span class="mr5 buylimit-item" data-id="2">仅限老用户</span><span class="mr5 buylimit-item" data-id="3">仅限充值用户</span></p>
+         <p class="mt8"><span class="title">购买权限</span> <span class="mr5 buylimit-item active" data-id="0">无</span><span class="mr5 buylimit-item" data-id="1">限新用户</span><span class="mr5 buylimit-item" data-id="2">限老用户</span><span class="mr5 buylimit-item" data-id="3">限充值用户</span></p>
     </div>
     <div class="wrap-pop-btn wrap-edit-item">
         <a href="javascript:;" class="ok-btn ok-edit-goods">确定</a>
