--- a/senguo.cc/admin/static/items/admin/order-staff-item.html
+++ b/senguo.cc/admin/static/items/admin/order-staff-item.html
@@ -1,5 +1,12 @@
-<li data-id="" class="send_item">
-    #<span class="sender-code w50 set-inl-blo"></span>||
-    <span class="sender-name w120 set-inl-blo set-left10"></span>||
-    <span class="sender-phone w120 set-inl-blo set-left10"></span>
-</li>
+<li data-id="">
+	<img src="" class="img"/>
+	<div class="info">
+		<p>
+			<span class="name pl10"></span>
+			<span class="pl10">ID:<span class="id"></span></span>
+			<span class="pl10">电话:<span class="phone"></span></span>
+		</p>
+		<p></p>
+	</div>
+	<span class="choosed">已选中</span>
+</li>;
