--- a/senguo.cc/admin/static/items/admin/order-item.html
+++ b/senguo.cc/admin/static/items/admin/order-item.html
@@ -43,11 +43,11 @@
                 <div class="status-info status_unpaid status-item text-green hidden" style="left:0%;">
                     <span class="status">未支付</span>
                 </div>
-                <div class="status-circle status_order status-item status-order bg-green hidden" style="left:0%;"><img src="/static/images/TDSG.png"/></div>
+                <div class="status-circle status_order status-item status-order bg-green hidden to-staff-choose forbid_click" style="left:0%;"><img src="/static/images/TDSG.png"/></div>
                 <div class="status-info status_order status-item text-blue hidden" style="left:0%;">
                     <span class="status to-staff-choose forbid_click">选择员工</span>
                 </div>
-                <div class="status-circle status_send status-item status-send bg-green hidden" style="left:50%;"><img src="/static/images/TDSG.png"/></div>
+                <div class="status-circle status_send status-item status-send bg-green hidden to-staff-choose forbid_click" style="left:50%;"><img src="/static/images/TDSG.png"/></div>
                 <div class="status-info status_send status-item text-blue hidden" style="left:50%;">
                     <span class="status  to-staff-choose to-staff-send forbid_click">配送中</span>
                 </div>
