--- a/senguo.cc/admin/static/items/admin/order-staff-item.html
+++ b/senguo.cc/admin/static/items/admin/order-staff-item.html
@@ -1,10 +1,10 @@
 <li data-id="">
-	<img src="" class="img"/>
-	<div class="info">
+	<img src="" class="sub-img"/>
+	<div class="sub-info">
 		<p>
-			<span class="name pl10"></span>
-			<span class="pl10">ID:<span class="id"></span></span>
-			<span class="pl10">电话:<span class="phone"></span></span>
+			<span class="sub-name pl10"></span>
+			<span class="pl10">ID:<span class="sub-id"></span></span>
+			<span class="pl10">电话:<span class="sub-phone"></span></span>
 		</p>
 		<p></p>
 	</div>
