官网交互提交

--- a/senguo.cc/admin/static/items/official/shop_item.html
+++ b/senguo.cc/admin/static/items/official/shop_item.html
@@ -1,5 +1,5 @@
 <li class="item">
-	<a href="/dangran" class="shop_link">
+	<a href="/dangran" class="shop_link" target="_blank">
 		<div class="img bg-white">
 			<img src="/static/images/logo.png" class="shop_log">
 		</div>
