fix model style

--- a/senguo.cc/admin/static/items/confirmBox.html
+++ b/senguo.cc/admin/static/items/confirmBox.html
@@ -12,7 +12,7 @@
             <div class="modal-footer text-center">
                 <button class="btn bg-green3 text-white confriming" data-status="true">确定</button>
             </div>
-            <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div>
+            <!-- <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div> -->
         </div>
     </div>
 </div>
