replace new_logo

--- a/senguo.cc/admin/static/items/official/shop_item.html
+++ b/senguo.cc/admin/static/items/official/shop_item.html
@@ -1,7 +1,7 @@
 <li class="item">
 	<a href="/dangran" class="shop_link" target="_blank">
 		<div class="img bg-white">
-			<img src="/static/images/logo.png" class="shop_log">
+			<img src="/static/official_img/new_logo.png" class="shop_log">
 		</div>
 		<div class="picture-bg"></div>
 		<div class="con text-white">
