--- a/senguo.cc/admin/static/items/admin/order-item.html
+++ b/senguo.cc/admin/static/items/admin/order-item.html
@@ -1,7 +1,7 @@
 <li class="order-list-item list-item set-width-float bg-greyf4 font14" data-id="" data-type="">
     <span class="arrow"></span>
     <a href="javascript:;" class="check order-check"></a>
-    <div class="list-title">
+    <div class="list-title order-inner">
         <span class="code pull-left">
             <span class="text-grey9">订单编号：</span><span class="order-code"></span>
         </span>
@@ -16,7 +16,7 @@
         <a class="print-order pull-right forbid_click" href="javascript:;" data-id="">打印</a>
     </div>
     <!--list-title-end-->
-    <div class="order-content set-width-float">
+    <div class="order-content set-width-float order-inner">
         <div class="order-info set-width-float">
             <span class="text-grey9"><span class="if_self">地址</span>：</span><span class="address address_show"></span>
             <span class="text-grey9"><span class="new" style="display:none;">新</span>用户：</span><a href="#" class="name forbid_click" target="_blank"></a>
