change order style

--- a/senguo.cc/admin/static/items/admin/order-item.html
+++ b/senguo.cc/admin/static/items/admin/order-item.html
@@ -13,7 +13,7 @@
             <!--<span class="tips">（其中小费<span class="tip"></span>元）</span>-->
         </span>
         <span class="pay-status pull-left pay-btn" data-pay="">支付方式</span>
-        <a class="print-order pull-right forbid_click" href="javascript:;" data-id="">打印</a>
+        <a class="print-order pull-right forbid_click link-btn" href="javascript:;" data-id="">打印</a>
     </div>
     <!--list-title-end-->
     <div class="order-content set-width-float order-inner">
