fix order style

--- a/senguo.cc/admin/static/items/admin/order-item.html
+++ b/senguo.cc/admin/static/items/admin/order-item.html
@@ -39,7 +39,9 @@
                 <div class="status-inner bg-green status_send hidden" style="width:50%;"></div>
                 <div class="status-inner bg-green status_finish hidden" style="width:100%;"></div>
                 <div class="status-inner bg-green status_comment hidden" style="width:100%;"></div>
-                <div class="status-circle status_unpaid status-item status-unpaid bg-green hidden" style="left:0%;"><img src="/static/images/TDSG.png"/></div></div>
+                <div class="status-circle status_unpaid status-item status-unpaid bg-green hidden" style="left:0%;">
+                    <img src="/static/images/TDSG.png"/>
+                </div>
                 <div class="status-info status_unpaid status-item text-green hidden" style="left:0%;">
                     <span class="status">未支付</span>
                 </div>
