fix order_staff phone null

--- a/senguo.cc/admin/static/items/admin/order-staff-item.html
+++ b/senguo.cc/admin/static/items/admin/order-staff-item.html
@@ -3,8 +3,8 @@
 	<div class="sub-info">
 		<p>
 			<span class="sub-name pl10"></span>
-			<span class="pl10">ID:<span class="sub-id"></span></span>
-			<span class="pl10">电话:<span class="sub-phone"></span></span>
+			<span class="pl10">ID：<span class="sub-id"></span></span>
+			<span class="pl10">电话：<span class="sub-phone"></span></span>
 		</p>
 		<p></p>
 	</div>
